<resources>
    <string name="app_name">MercProject_final</string>
    <string name="title_character_letter">CHARACTER</string>
    <string name="title_country">COUNTRY</string>
    <string name="title_seed">SEED</string>
    <string name="title_rune">RUNE</string>
    <string name="title_activity">ACTIVITY</string>
    <string name="title_merc_storia">Merc Storia</string>
    <string name="char_five_btn">未擁有</string>
    <string name="char_five_checked">未持有</string>
    <string name="char_five_name">Name</string>
    <string name="char_checked">已擁有</string>
    <string name="seed_darkness">闇屬性</string>
    <string name="seed_light">光屬性</string>
    <string name="seed_wind">風屬性</string>
    <string name="seed_water">水屬性</string>
    <string name="seed_fire">炎屬性</string>
    <string name="seed_soul">魂</string>
    <string name="seed_break">破</string>
    <string name="seed_paralysis">麻痺</string>
    <string name="seed_terroist">威壓</string>
    <string name="seed_search_result">搜尋</string>
    <string name="seed_spirit">士氣</string>
    <string name="seed_name">seed name</string>
    <string name="seed_location">seed location</string>
    <string name="merc_storia_s_world_map">Merc Storia World Map</string>
    <string name="_123">123</string>


    五星角色名稱
    <string-array name="fivestar_title">
        <item>Morusya</item>
        <item>Rey</item>
        <item>Aura</item>
        <item>Koneria</item>
        <item>Viruberu</item>
        <item>Arusian</item>
        <item>Fara</item>
        <item>Kaiza</item>
        <item>Misutika</item>
        <item>Mokuren</item>
        <item>rosyanaku</item>
        <item>yuvensu</item>
        <item>anahito</item>
        <item>harushuto</item>
        <item>purometendo</item>
        <item>riberudi</item>
        <item>matsukase</item>
        <item>torenoserika</item>
        <item>ibu</item>
        <item>miogi</item>
        <item>burado</item>
        <item>sitoruiyu</item>
        <item>barutoromei</item>
        <item>roze</item>
        <item>sirufika</item>
        <item>guregotoru</item>
        <item>furansiru</item>
        <item>sarodia</item>
        <item>torisu</item>
        <item>rodain</item>
        <item>kurei</item>
        <item>furavia</item>
        <item>misheria</item>
        <item>neteneburu</item>
        <item>riyusifu</item>
        <item>yujia</item>
        <item>magareto</item>
        <item>bureidin</item>

    </string-array>
    五星角色縮圖
    <array name="fivestar_minimages">
        <item>@drawable/za_morusya</item>
        <item>@drawable/zb_rey</item>
        <item>@drawable/zc_aura</item>
        <item>@drawable/zd_koneria</item>
        <item>@drawable/ze_viruberu</item>
        <item>@drawable/zf_arusian</item>
        <item>@drawable/zg_fara</item>
        <item>@drawable/zh_kaiza</item>
        <item>@drawable/zi_misutika</item>
        <item>@drawable/zj_mokuren</item>
        <item>@drawable/zk_rosyanaku</item>
        <item>@drawable/zl_yuvensu</item>
        <item>@drawable/zm_anahito</item>
        <item>@drawable/zn_harushuto</item>
        <item>@drawable/zo_purometendo</item>
        <item>@drawable/zp_riberudi</item>
        <item>@drawable/zq_matsukase</item>
        <item>@drawable/zr_torenoserika</item>
        <item>@drawable/zs_ibu</item>
        <item>@drawable/zt_miogi</item>
        <item>@drawable/zu_burado</item>
        <item>@drawable/zv_sitoruiyu</item>
        <item>@drawable/zw_barutoromei</item>
        <item>@drawable/zx_roze</item>
        <item>@drawable/zy_sirufika</item>
        <item>@drawable/zz_guregotoru</item>
        <item>@drawable/aa_furansiru</item>
        <item>@drawable/ab_sarodia</item>
        <item>@drawable/ac_torisu</item>
        <item>@drawable/ad_rodain</item>
        <item>@drawable/ae_kurei</item>
        <item>@drawable/af_furavia</item>
        <item>@drawable/ag_misheria</item>
        <item>@drawable/ah_neteneburu</item>
        <item>@drawable/ai_riyusifu</item>
        <item>@drawable/aj_yujia</item>
        <item>@drawable/ak_magareto</item>
        <item>@drawable/al_bureidin</item>

    </array>

    <string-array name="fivestar_checked">
        <item>未持有</item>
        <item>未持有</item>
        <item>未持有</item>
        <item>未持有</item>
        <item>未持有</item>
        <item>未持有</item>
        <item>未持有</item>
        <item>未持有</item>
        <item>未持有</item>
        <item>未持有</item>
    </string-array>
</resources>